--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -557,7 +557,7 @@ section {
 /* FOOTER */
 
 #footer-graphic {
-    position: relative;
+    position: relative; z-index: 1;
     margin: 100px 0 0 0; height: 1em;
     overflow: hidden;
     font-size: 16vw;
@@ -571,6 +571,7 @@ section {
         max-width: 1200px; width: 100%; height: 100%;
         font-size: inherit;
         @include transform(translate(-50%, 0));
+        @include transition(.1s);
         
         .rect {
             position: absolute;
@@ -674,10 +675,11 @@ section {
 }
 
 footer {
-    position: relative; z-index: 1;
+    position: relative; z-index: 2;
     padding: 20px 0 200px 0;
     background: $red;
     text-align: center;
+    @include transition(.1s);
     
     #to-top {
         display: inline-block; position: relative;
