--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -133,6 +133,9 @@ section {
         
         position: relative;
         max-width: none; width: auto; min-height: 100vh; padding: 100px 0 30px 0;
+        
+        // to smoothen the process when the mobile navbar is retracted or reappears (which affects vh units)
+        @include transition(2s .5s);
     }
     
     .center {
@@ -571,7 +574,6 @@ section {
         max-width: 1200px; width: 100%; height: 100%;
         font-size: inherit;
         @include transform(translate(-50%, 0));
-        @include transition(.1s);
         
         .rect {
             position: absolute;
@@ -679,7 +681,6 @@ footer {
     padding: 20px 0 200px 0;
     background: $red;
     text-align: center;
-    @include transition(.1s);
     
     #to-top {
         display: inline-block; position: relative;
