--- a/css/source/generic.scss
+++ b/css/source/generic.scss
@@ -136,6 +136,7 @@ h3 {
 
 p {
     margin: 18px 0;
+    word-break: break-word;
     color: $gray; font-size: 16px; line-height: 1.5em;
     
     b {color: $red;}
