--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -616,6 +616,7 @@ section {
     
         .mail {
             display: inline-block;
+            padding: 0; margin: 1em;
             color: $blue;
             @include transition(.1s);
             
