--- a/css/source/power-prefixer.scss
+++ b/css/source/power-prefixer.scss
@@ -78,8 +78,9 @@
 
 // === DISPLAY ===
 
-       @mixin display($val) {@include -power-display($val);}
-@mixin -power-display($val) {
+@mixin          display($val) {
+@include -power-display($val);}
+@mixin   -power-display($val) {
     
     @if ($val == 'flex') {
         
@@ -110,8 +111,9 @@
 
 // === FLEX-BOX ===
 
-       @mixin align-content($val) {@include -power-align-content($val);}
-@mixin -power-align-content($val) {
+@mixin          align-content($val) {
+@include -power-align-content($val);}
+@mixin   -power-align-content($val) {
     
     @if (-power-is-in-list($val, ('center', 'stretch'))) {
         
@@ -145,8 +147,9 @@
     
 }
 
-       @mixin align-items($val) {@include -power-align-items($val);}
-@mixin -power-align-items($val) {
+@mixin          align-items($val) {
+@include -power-align-items($val);}
+@mixin   -power-align-items($val) {
     
     $old-attr: 0;
     
@@ -177,8 +180,9 @@
     
 }
 
-       @mixin align-self($val) {@include -power-align-self($val);}
-@mixin -power-align-self($val) {
+@mixin          align-self($val) {
+@include -power-align-self($val);}
+@mixin   -power-align-self($val) {
     
     @if (-power-is-in-list($val, ('auto', 'baseline', 'center', 'stretch'))) {
         
@@ -207,8 +211,9 @@
     
 }
 
-       @mixin flex($val) {@include -power-flex($val);}
-@mixin -power-flex($val) {
+@mixin          flex($val) {
+@include -power-flex($val);}
+@mixin   -power-flex($val) {
         
     // element needs to have width set (for older syntax), otherwise element collapses
     
@@ -280,8 +285,9 @@
     
 }
 
-       @mixin flex-direction($val) {@include -power-flex-direction($val);}
-@mixin -power-flex-direction($val) {
+@mixin          flex-direction($val) {
+@include -power-flex-direction($val);}
+@mixin   -power-flex-direction($val) {
     
     @if (-power-is-in-list($val, ('column', 'column-reverse'))) {
         
@@ -319,16 +325,18 @@
     
 }
 
-       @mixin flex-flow($dir, $wrap) {@include -power-flex-flow($dir, $wrap);}
-@mixin -power-flex-flow($dir, $wrap) {
+@mixin          flex-flow($dir, $wrap) {
+@include -power-flex-flow($dir, $wrap);}
+@mixin   -power-flex-flow($dir, $wrap) {
     
     @include flex-direction($dir);
     @include flex-wrap($wrap);
     
 }
 
-       @mixin flex-basis($val) {@include -power-flex-basis($val);}
-@mixin -power-flex-basis($val) {
+@mixin          flex-basis($val) {
+@include -power-flex-basis($val);}
+@mixin   -power-flex-basis($val) {
     
     // must be positive, unitless number
     @if (
@@ -350,8 +358,9 @@
     
 }
 
-       @mixin flex-grow($val) {@include -power-flex-grow($val);}
-@mixin -power-flex-grow($val) {
+@mixin          flex-grow($val) {
+@include -power-flex-grow($val);}
+@mixin   -power-flex-grow($val) {
     
     // must be positive, unitless number
     @if (
@@ -372,8 +381,9 @@
     
 }
 
-       @mixin flex-shrink($val) {@include -power-flex-shrink($val);}
-@mixin -power-flex-shrink($val) {
+@mixin          flex-shrink($val) {
+@include -power-flex-shrink($val);}
+@mixin   -power-flex-shrink($val) {
     
     // must be positive, unitless number
     @if (
@@ -395,8 +405,9 @@
     
 }
 
-       @mixin flex-wrap($val) {@include -power-flex-wrap($val);}
-@mixin -power-flex-wrap($val) {
+@mixin          flex-wrap($val) {
+@include -power-flex-wrap($val);}
+@mixin   -power-flex-wrap($val) {
     
     @if (-power-is-in-list($val, ('nowrap', 'wrap', 'wrap-reverse'))) {
         
@@ -420,8 +431,9 @@
     
 }
 
-       @mixin justify-content($val) {@include -power-justify-content($val);}
-@mixin -power-justify-content($val) {
+@mixin          justify-content($val) {
+@include -power-justify-content($val);}
+@mixin   -power-justify-content($val) {
     
     @if ($val == 'center') {
         
@@ -464,8 +476,9 @@
     
 }
 
-       @mixin order($val) {@include -power-animation($val);}
-@mixin -power-order($val) {
+@mixin          order($val) {
+@include -power-order($val);}
+@mixin   -power-order($val) {
     
     // must be integer
     @if (-power-is-integer($val)) {
@@ -492,8 +505,9 @@
 
 // === GENERIC ===
 
-       @mixin animation($anis...) {@include -power-animation($anis...);}
-@mixin -power-animation($anis...) {
+@mixin          animation($anis...) {
+@include -power-animation($anis...);}
+@mixin   -power-animation($anis...) {
     
     -webkit-animation: $anis;
        -moz-animation: $anis;
@@ -502,8 +516,9 @@
     
 }
 
-       @mixin animation-delay($delays...) {@include -power-animation-delay($delays...);}
-@mixin -power-animation-delay($delays...) {
+@mixin          animation-delay($delays...) {
+@include -power-animation-delay($delays...);}
+@mixin   -power-animation-delay($delays...) {
     
     -webkit-animation-delay: $delays;
        -moz-animation-delay: $delays;
@@ -512,8 +527,9 @@
     
 }
 
-       @mixin animation-direction($dirs...) {@include -power-animation-direction($dirs...);}
-@mixin -power-animation-direction($dirs...) {
+@mixin          animation-direction($dirs...) {
+@include -power-animation-direction($dirs...);}
+@mixin   -power-animation-direction($dirs...) {
     
     -webkit-animation-direction: $dirs;
        -moz-animation-direction: $dirs;
@@ -522,8 +538,9 @@
     
 }
 
-       @mixin animation-duration($durs...) {@include -power-animation-duration($durs...);}
-@mixin -power-animation-duration($durs...) {
+@mixin          animation-duration($durs...) {
+@include -power-animation-duration($durs...);}
+@mixin   -power-animation-duration($durs...) {
     
     -webkit-animation-duration: $durs;
        -moz-animation-duration: $durs;
@@ -532,8 +549,9 @@
     
 }
 
-       @mixin animation-fill-mode($modes...) {@include -power-animation-fill-mode($modes...);}
-@mixin -power-animation-fill-mode($modes...) {
+@mixin          animation-fill-mode($modes...) {
+@include -power-animation-fill-mode($modes...);}
+@mixin   -power-animation-fill-mode($modes...) {
     
     -webkit-animation-fill-mode: $modes;
        -moz-animation-fill-mode: $modes;
@@ -542,8 +560,9 @@
     
 }
 
-       @mixin animation-iteration-count($its...) {@include -power-animation-iteration-count($its...);}
-@mixin -power-animation-iteration-count($its...) {
+@mixin          animation-iteration-count($its...) {
+@include -power-animation-iteration-count($its...);}
+@mixin   -power-animation-iteration-count($its...) {
     
     -webkit-animation-iteration-count: $its;
        -moz-animation-iteration-count: $its;
@@ -552,8 +571,9 @@
     
 }
 
-       @mixin animation-name($names...) {@include -power-animation-name($names...);}
-@mixin -power-animation-name($names...) {
+@mixin          animation-name($names...) {
+@include -power-animation-name($names...);}
+@mixin   -power-animation-name($names...) {
     
     -webkit-animation-name: $names;
        -moz-animation-name: $names;
@@ -562,8 +582,9 @@
     
 }
 
-       @mixin animation-play-state($states...) {@include -power-animation-play-state($states...);}
-@mixin -power-animation-play-state($states...) {
+@mixin          animation-play-state($states...) {
+@include -power-animation-play-state($states...);}
+@mixin   -power-animation-play-state($states...) {
     
     -webkit-animation-play-state: $states;
        -moz-animation-play-state: $states;
@@ -572,8 +593,9 @@
     
 }
 
-       @mixin animation-timing-function($fns...) {@include -power-animation-timing-function($fns...);}
-@mixin -power-animation-timing-function($fns...) {
+@mixin          animation-timing-function($fns...) {
+@include -power-animation-timing-function($fns...);}
+@mixin   -power-animation-timing-function($fns...) {
     
     -webkit-animation-timing-function: $fns;
        -moz-animation-timing-function: $fns;
@@ -582,8 +604,9 @@
     
 }
 
-       @mixin appearance($val) {@include -power-appearance($val);}
-@mixin -power-appearance($val) {
+@mixin          appearance($val) {
+@include -power-appearance($val);}
+@mixin   -power-appearance($val) {
     
     -webkit-appearance: $val;
        -moz-appearance: $val;
@@ -591,8 +614,9 @@
     
 }
 
-       @mixin background-clip($val) {@include -power-background-clip($val);}
-@mixin -power-background-clip($val) {
+@mixin          background-clip($val) {
+@include -power-background-clip($val);}
+@mixin   -power-background-clip($val) {
     
     -webkit-background-clip: $val;
        -moz-background-clip: $val;
@@ -600,8 +624,9 @@
     
 }
 
-       @mixin background-size($val) {@include -power-background-size($val);}
-@mixin -power-background-size($val) {
+@mixin          background-size($val) {
+@include -power-background-size($val);}
+@mixin   -power-background-size($val) {
     
     -webkit-background-size: $val;
        -moz-background-size: $val;
@@ -610,8 +635,9 @@
     
 }
 
-       @mixin border-radius($val) {@include -power-border-radius($val);}
-@mixin -power-border-radius($val) {
+@mixin          border-radius($val) {
+@include -power-border-radius($val);}
+@mixin   -power-border-radius($val) {
     
     -webkit-border-radius: $val;
        -moz-border-radius: $val;
@@ -619,8 +645,9 @@
     
 }
 
-       @mixin border-bottom-right-radius($val) {@include -power-border-bottom-right-radius($val);}
-@mixin -power-border-bottom-right-radius($val) {
+@mixin          border-bottom-right-radius($val) {
+@include -power-border-bottom-right-radius($val);}
+@mixin   -power-border-bottom-right-radius($val) {
     
     -webkit-border-bottom-right-radius: $val;
        -moz-border-bottom-right-radius: $val;
@@ -628,8 +655,9 @@
     
 }
 
-       @mixin border-bottom-left-radius($val) {@include -power-border-bottom-left-radius($val);}
-@mixin -power-border-bottom-left-radius($val) {
+@mixin          border-bottom-left-radius($val) {
+@include -power-border-bottom-left-radius($val);}
+@mixin   -power-border-bottom-left-radius($val) {
     
     -webkit-border-bottom-left-radius: $val;
        -moz-border-bottom-left-radius: $val;
@@ -637,8 +665,9 @@
     
 }
 
-       @mixin border-top-right-radius($val) {@include -power-border-top-right-radius($val);}
-@mixin -power-border-top-right-radius($val) {
+@mixin          border-top-right-radius($val) {
+@include -power-border-top-right-radius($val);}
+@mixin   -power-border-top-right-radius($val) {
     
     -webkit-border-top-right-radius: $val;
        -moz-border-top-right-radius: $val;
@@ -646,8 +675,9 @@
     
 }
 
-       @mixin border-top-left-radius($val) {@include -power-border-top-left-radius($val);}
-@mixin -power-border-top-left-radius($val) {
+@mixin          border-top-left-radius($val) {
+@include -power-border-top-left-radius($val);}
+@mixin   -power-border-top-left-radius($val) {
     
     -webkit-border-top-left-radius: $val;
        -moz-border-top-left-radius: $val;
@@ -655,8 +685,9 @@
     
 }
 
-       @mixin box-shadow($shadows...) {@include -power-box-shadow($shadows...);}
-@mixin -power-box-shadow($shadows...) {
+@mixin          box-shadow($shadows...) {
+@include -power-box-shadow($shadows...);}
+@mixin   -power-box-shadow($shadows...) {
     
     -webkit-box-shadow: $shadows;
        -moz-box-shadow: $shadows;
@@ -664,8 +695,9 @@
     
 }
 
-       @mixin box-sizing($val) {@include -power-box-sizing($val);}
-@mixin -power-box-sizing($val) {
+@mixin          box-sizing($val) {
+@include -power-box-sizing($val);}
+@mixin   -power-box-sizing($val) {
     
     -webkit-box-sizing: $val;
        -moz-box-sizing: $val;
@@ -673,8 +705,9 @@
     
 }
 
-       @mixin column-count($val) {@include -power-column-count($val);}
-@mixin -power-column-count($val) {
+@mixin          column-count($val) {
+@include -power-column-count($val);}
+@mixin   -power-column-count($val) {
     
     -webkit-column-count: $val; // Chrome, Safari, BB
        -moz-column-count: $val; // Firefox
@@ -682,8 +715,9 @@
     
 }
 
-       @mixin column-gap($val) {@include -power-column-gap($val);}
-@mixin -power-column-gap($val) {
+@mixin          column-gap($val) {
+@include -power-column-gap($val);}
+@mixin   -power-column-gap($val) {
     
     -webkit-column-gap: $val;
        -moz-column-gap: $val;
@@ -691,8 +725,9 @@
     
 }
 
-       @mixin column-rule($vals...) {@include -power-column-rule($vals...);}
-@mixin -power-column-rule($vals...) {
+@mixin          column-rule($vals...) {
+@include -power-column-rule($vals...);}
+@mixin   -power-column-rule($vals...) {
     
     -webkit-column-rule: $vals;
        -moz-column-rule: $vals;
@@ -700,16 +735,18 @@
     
 }
 
-       @mixin filter($val) {@include -power-filter($val);}
-@mixin -power-filter($val) {
+@mixin          filter($val) {
+@include -power-filter($val);}
+@mixin   -power-filter($val) {
     
     -webkit-filter: $val;
             filter: $val;
     
 }
 
-       @mixin hyphens($val) {@include -power-hyphens($val);}
-@mixin -power-hyphens($val) {
+@mixin          hyphens($val) {
+@include -power-hyphens($val);}
+@mixin   -power-hyphens($val) {
     
     -webkit-hyphens: auto; // Safari 5.1+
        -moz-hyphens: auto; // Firefox 6+
@@ -758,8 +795,9 @@
     
 }
 
-       @mixin linear-gradient($vals...) {@include -power-linear-gradient($vals...);}
-@mixin -power-linear-gradient($vals...) {
+@mixin          linear-gradient($vals...) {
+@include -power-linear-gradient($vals...);}
+@mixin   -power-linear-gradient($vals...) {
     
     $error: false;
     $first-color: null;
@@ -810,8 +848,9 @@
     
 }
 
-       @mixin max-height($val) {@include -power-max-height($val);}
-@mixin -power-max-height($val) {
+@mixin          max-height($val) {
+@include -power-max-height($val);}
+@mixin   -power-max-height($val) {
     
     @if ($val == 'fit-content') {
         
@@ -866,8 +905,9 @@
     
 }
 
-       @mixin max-width($val) {@include -power-max-width($val);}
-@mixin -power-max-width($val) {
+@mixin          max-width($val) {
+@include -power-max-width($val);}
+@mixin   -power-max-width($val) {
     
     @if ($val == 'min-content') {
         
@@ -924,8 +964,9 @@
     
 }
 
-       @mixin min-height($val) {@include -power-min-height($val);}
-@mixin -power-min-height($val) {
+@mixin          min-height($val) {
+@include -power-min-height($val);}
+@mixin   -power-min-height($val) {
     
     @if ($val == 'min-content') {
         
@@ -980,8 +1021,9 @@
     
 }
 
-       @mixin min-width($val) {@include -power-min-width($val);}
-@mixin -power-min-width($val) {
+@mixin          min-width($val) {
+@include -power-min-width($val);}
+@mixin   -power-min-width($val) {
     
     @if ($val == 'min-content') {
         
@@ -1038,8 +1080,9 @@
     
 }
 
-       @mixin object-fit($val) {@include -power-object-fit($val);}
-@mixin -power-object-fit($val) {
+@mixin          object-fit($val) {
+@include -power-object-fit($val);}
+@mixin   -power-object-fit($val) {
     
     -o-object-fit: $val;
        object-fit: $val;
@@ -1063,8 +1106,9 @@
     
 }
 
-       @mixin position($val) {@include -power-position($val);}
-@mixin -power-position($val) {
+@mixin          position($val) {
+@include -power-position($val);}
+@mixin   -power-position($val) {
     
     @if ($val == 'sticky') {
         
@@ -1085,16 +1129,18 @@
     
 }
 
-       @mixin text-overflow($val) {@include -power-text-overflow($val);}
-@mixin -power-text-overflow($val) {
+@mixin          text-overflow($val) {
+@include -power-text-overflow($val);}
+@mixin   -power-text-overflow($val) {
     
     -o-text-overflow: $val;
        text-overflow: $val;
     
 }
 
-       @mixin transform($vals) {@include -power-transform($vals);}
-@mixin -power-transform($vals...) {
+@mixin          transform($vals) {
+@include -power-transform($vals);}
+@mixin   -power-transform($vals...) {
     
     -webkit-transform: $vals; // Chrome 36-, Safari 5.1+
        -moz-transform: $vals;
@@ -1104,8 +1150,9 @@
     
 }
 
-       @mixin transform-origin($val) {@include -power-transform-origin($val);}
-@mixin -power-transform-origin($val) {
+@mixin          transform-origin($val) {
+@include -power-transform-origin($val);}
+@mixin   -power-transform-origin($val) {
     
     -webkit-transform-origin: $val;
        -moz-transform-origin: $val;
@@ -1115,8 +1162,9 @@
     
 }
 
-       @mixin transform-style($val) {@include -power-transform-style($val);}
-@mixin -power-transform-style($val) {
+@mixin          transform-style($val) {
+@include -power-transform-style($val);}
+@mixin   -power-transform-style($val) {
     
     -webkit-transform-style: $val;
        -moz-transform-style: $val;
@@ -1126,8 +1174,9 @@
     
 }
 
-       @mixin transition($trans...) {@include -power-transition($trans...);}
-@mixin -power-transition($trans...) {
+@mixin          transition($trans...) {
+@include -power-transition($trans...);}
+@mixin   -power-transition($trans...) {
     
     -webkit-transition: $trans;
        -moz-transition: $trans;
@@ -1136,8 +1185,9 @@
     
 }
 
-       @mixin transition-delay($delays...) {@include -power-transition-delay($delays...);}
-@mixin -power-transition-delay($delays...) {
+@mixin          transition-delay($delays...) {
+@include -power-transition-delay($delays...);}
+@mixin   -power-transition-delay($delays...) {
     
     -webkit-transition-delay: $delays;
        -moz-transition-delay: $delays;
@@ -1146,8 +1196,9 @@
     
 }
 
-       @mixin transition-duration($durs...) {@include -power-transition-duration($durs...);}
-@mixin -power-transition-duration($durs...) {
+@mixin          transition-duration($durs...) {
+@include -power-transition-duration($durs...);}
+@mixin   -power-transition-duration($durs...) {
     
     -webkit-transition-duration: $durs;
        -moz-transition-duration: $durs;
@@ -1156,8 +1207,9 @@
     
 }
 
-       @mixin transition-property($props...) {@include -power-transition-property($props...);}
-@mixin -power-transition-property($props...) {
+@mixin          transition-property($props...) {
+@include -power-transition-property($props...);}
+@mixin   -power-transition-property($props...) {
     
     -webkit-transition-property: $props;
        -moz-transition-property: $props;
@@ -1166,8 +1218,9 @@
     
 }
 
-       @mixin transition-timing-function($fns...) {@include -power-transition-timing-function($fns...);}
-@mixin -power-transition-timing-function($fns...) {
+@mixin          transition-timing-function($fns...) {
+@include -power-transition-timing-function($fns...);}
+@mixin   -power-transition-timing-function($fns...) {
     
     -webkit-transition-timing-function: $fns;
        -moz-transition-timing-function: $fns;
@@ -1176,15 +1229,18 @@
     
 }
 
-       @mixin user-select($val) {@include -power-user-select($val);}
-@mixin -power-user-select($val) {
+@mixin          user-select($val) {
+@include -power-user-select($val);}
+@mixin   -power-user-select($val) {
     
     @if (-power-is-in-list($val, ('all', 'auto', 'contain', 'none', 'text'))) {
         
-        -webkit-user-select: $val;
-           -moz-user-select: $val;
-            -ms-user-select: $val;
-                user-select: $val;
+        -webkit-touch-callout: $val; // iOs Safari
+          -webkit-user-select: $val; // Safari
+           -khtml-user-select: $val; // Konqueror
+             -moz-user-select: $val; // Firefox (Old)
+              -ms-user-select: $val; // Internet Explorer, Edge
+                  user-select: $val; // Chrome, Opera, Firefox
         
     }
     @else {
@@ -1195,8 +1251,9 @@
     
 }
 
-       @mixin word-break($val) {@include -power-word-break($val);}
-@mixin -power-word-break($val) {
+@mixin          word-break($val) {
+@include -power-word-break($val);}
+@mixin   -power-word-break($val) {
     
     -ms-word-break: $val;
         word-break: $val;
