--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -676,7 +676,7 @@ section {
         }
         
         &.github:before     {@extend %icon-github;}
-        &.twitter:before    {@extend %icon-twitter;}
+        //&.twitter:before    {@extend %icon-twitter;}
     }
 }
 
