updated website structure

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -16,6 +16,7 @@ $green: #4aad32;
 
 // reset browser styles and overwrite with generic HTML
 @import 'reset';
+@import 'fonts';
 @import 'generic';
 
 // load resources
