projects are now dynamically loaded from a data representation

--- a/css/src/generic.scss
+++ b/css/src/generic.scss
@@ -90,6 +90,10 @@ div {
     font-size: 0;
 }
 
+html.js-on .hide-with-js {
+    display: none !important;
+}
+
 html.js-off .hide-without-js {
     display: none !important;
 }
