--- a/css/src/sections.scss
+++ b/css/src/sections.scss
@@ -508,13 +508,13 @@ section {
 
                 .heading {
                     display: inline-block; vertical-align: bottom;
-                    margin: 0;
+                    margin: 0 8px 0 0;
                     color: $gray; font-size: 28px; line-height: 1em; font-weight: 700;
                 }
                 
                 .year {
                     display: inline-block; vertical-align: bottom;
-                    margin-left: 8px;
+                    margin-top: 6px;
                     font-size: 20px; line-height: 1em; color: $lightgray;
                 }
 
